syntax = "proto2";
package iircClient;


message Login {
    required string username = 1;
    required string password = 2;
}
