syntax = "proto2";
package iircCommon;


enum Type {
    Login = 0;
    ChannelList = 1;
    BacklogNotification = 2;
}


message Header {
	required Type type = 1;
	required uint64 length = 2;
}
